Changes to the original design. Pages updated as per discussions. More changes to be done with Backend code in place.

--- a/about.html
+++ b/about.html
@@ -182,55 +182,88 @@
         <!-- / .container -->
     </div>
     <!-- / .hero -->
+    <h2 class="heading hero-heading__sub"><span class="howitworks">How It Works</span></h2>
+    <section id="cd-timeline" class="cd-container">
+       <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
+            </div> <!-- cd-timeline-img -->
 
+            <div class="cd-timeline-content">
+                <h2>Title of section 1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <a href="#0" class="cd-read-more">Read more</a>
+                <span class="cd-date">Lorem Ipsum</span>
+            </div> <!-- cd-timeline-content -->
+        </div> <!-- cd-timeline-block -->
+
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-movie">
+                <img src="img/cd-icon-movie.svg" alt="Movie">
+            </div> <!-- cd-timeline-img -->
+
+            <div class="cd-timeline-content">
+                <h2>Title of section 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
+                <a href="#0" class="cd-read-more">Read more</a>
+                <span class="cd-date">Lorem Ipsum</span>
+            </div> <!-- cd-timeline-content -->
+        </div> <!-- cd-timeline-block -->
+
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
+            </div> <!-- cd-timeline-img -->
+
+            <div class="cd-timeline-content">
+                <h2>Title of section 3</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+                <a href="#0" class="cd-read-more">Read more</a>
+                <span class="cd-date">Lorem Ipsum</span>
+            </div> <!-- cd-timeline-content -->
+        </div> <!-- cd-timeline-block -->
+
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-location">
+                <img src="img/cd-icon-location.svg" alt="Location">
+            </div> <!-- cd-timeline-img -->
+
+            <div class="cd-timeline-content">
+                <h2>Title of section 4</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <a href="#0" class="cd-read-more">Read more</a>
+                <span class="cd-date">Lorem Ipsum</span>
+            </div> <!-- cd-timeline-content -->
+        </div> <!-- cd-timeline-block -->
+
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-location">
+                <img src="img/cd-icon-location.svg" alt="Location">
+            </div> <!-- cd-timeline-img -->
+
+            <div class="cd-timeline-content">
+                <h2>Title of section 5</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
+                <a href="#0" class="cd-read-more">Read more</a>
+                <span class="cd-date">Lorem Ipsum</span>
+            </div> <!-- cd-timeline-content -->
+        </div> <!-- cd-timeline-block -->
+
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-movie">
+                <img src="img/cd-icon-movie.svg" alt="Movie">
+            </div> <!-- cd-timeline-img -->
+
+            <div class="cd-timeline-content">
+                <h2>Final Section</h2>
+                <p>This is the content of the last section</p>
+                <span class="cd-date">Lorem Ipsum</span>
+            </div> <!-- cd-timeline-content -->
+        </div> <!-- cd-timeline-block -->
+    </section> <!-- cd-timeline -->
     <!-- How To Do
         ============================== -->
-    <div class="section text-section" id="vision-statement">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <h2 class="heading__sub hero-heading__sub">Get A Pleasant Event Management Experience</h2>
-                    <h3 class="heading__sub hero-heading__sub">By Moving It
-                        <span class="focus" data-toggle="popover" data-trigger="click" data-html="true" data-content="<a href='services.html' target='_blank'>See how can you do that</a>">Online</span></h3>
-                    <p class="">
-                        Modification at the wormhole was the future of turbulence, fighted to a solid nanomachine. Stars are the c-beams of the clear courage.
-                        I imitate this sonic shower, it's called reliable turbulence. Tragedy, definition, and sensor. The procedure is a seismic admiral.
-                        Modification at the wormhole was the future of turbulence, fighted to a solid nanomachine. Stars are the c-beams of the clear courage.
-                        I imitate this sonic shower, it's called reliable turbulence. Tragedy, definition, and sensor. The procedure is a seismic admiral.
-                        Modification at the wormhole was the future of turbulence, fighted to a solid nanomachine. Stars are the c-beams of the clear courage.
-                        I imitate this sonic shower, it's called reliable turbulence. Tragedy, definition, and sensor. The procedure is a seismic admiral.
-                        Modification at the wormhole was the future of turbulence, fighted to a solid nanomachine. Stars are the c-beams of the clear courage.
-                        I imitate this sonic shower, it's called reliable turbulence. Tragedy, definition, and sensor. The procedure is a seismic admiral.
-                    </p>
-                </div>
-                <hr/>
-            </div>
-        </div>
-    </div>
-    <hr/>
-    <!-- / .section -->
-    <!-- Guests Features
-        ============================== -->
-    <div class="section" id="story">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <h2 class="heading__sub hero-heading__sub">The Story</h2>
-                    <p class="">
-                        Modification at the wormhole was the future of turbulence, fighted to a solid nanomachine. Stars are the c-beams of the clear courage.
-                        I imitate this sonic shower, it's called reliable turbulence. Tragedy, definition, and sensor. The procedure is a seismic admiral.
-                        Modification at the wormhole was the future of turbulence, fighted to a solid nanomachine. Stars are the c-beams of the clear courage.
-                        I imitate this sonic shower, it's called reliable turbulence. Tragedy, definition, and sensor. The procedure is a seismic admiral.
-                        Modification at the wormhole was the future of turbulence, fighted to a solid nanomachine. Stars are the c-beams of the clear courage.
-                        I imitate this sonic shower, it's called reliable turbulence. Tragedy, definition, and sensor. The procedure is a seismic admiral.
-                        Modification at the wormhole was the future of turbulence, fighted to a solid nanomachine. Stars are the c-beams of the clear courage.
-                        I imitate this sonic shower, it's called reliable turbulence. Tragedy, definition, and sensor. The procedure is a seismic admiral.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-
+<!--    <div class="section text-section" id="vision-statement">
         <div class="action-buttons" id="action">
             <div class="container static">
                 <div class="row">
@@ -246,7 +279,7 @@
                 </div>
             </div>
         </div>
-
+    </div>-->
     <!-- Action
         ============================== -->
     <div class="section actionlink" id="actionlink">
@@ -485,7 +518,7 @@
         </div> <!-- / .container -->
     </div> <!-- / .section -->
 
-    <div class="section" id="social-links">
+<!--    <div class="section" id="social-links">
         <div class="container">
             <div class="row">
                 <h2 class="heading">We are near you. Just a click away.</h2>
@@ -500,7 +533,7 @@
                 <div class="col-md-2">&nbsp;</div>
             </div>
         </div>
-    </div>
+    </div>-->
 
     <!-- FOOTER
         ============================== -->
@@ -539,7 +572,6 @@
     ================================================== -->
 <!-- JS Global -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src='https://www.google.com/recaptcha/api.js'></script>
 <script src="js/bootstrap/bootstrap.min.js"></script>
 <!-- JS Plugins -->
 <script src="js/plugins/smoothscroll.js"></script>
@@ -549,13 +581,38 @@
 <script src="js/plugins/jquery.peity.min.js"></script>
 <script src="js/plugins/lightbox.min.js"></script>
 <script src="js/plugins/contact.js"></script>
-<script src="http://malsup.github.com/jquery.cycle2.js"></script>
 <!-- JS Custom -->
 <script src="js/custom.js"></script>
 <script>
     $(function () {
         $('[data-toggle="popover"]').popover()
-    })
+    });
+    jQuery(document).ready(function($){
+        var timelineBlocks = $('.cd-timeline-block'),
+                offset = 0.8;
+
+        //hide timeline blocks which are outside the viewport
+        hideBlocks(timelineBlocks, offset);
+
+        //on scolling, show/animate timeline blocks when enter the viewport
+        $(window).on('scroll', function(){
+            (!window.requestAnimationFrame)
+                    ? setTimeout(function(){ showBlocks(timelineBlocks, offset); }, 100)
+                    : window.requestAnimationFrame(function(){ showBlocks(timelineBlocks, offset); });
+        });
+
+        function hideBlocks(blocks, offset) {
+            blocks.each(function(){
+                ( $(this).offset().top > $(window).scrollTop()+$(window).height()*offset ) && $(this).find('.cd-timeline-img, .cd-timeline-content').addClass('is-hidden');
+            });
+        }
+
+        function showBlocks(blocks, offset) {
+            blocks.each(function(){
+                ( $(this).offset().top <= $(window).scrollTop()+$(window).height()*offset && $(this).find('.cd-timeline-img').hasClass('is-hidden') ) && $(this).find('.cd-timeline-img, .cd-timeline-content').removeClass('is-hidden').addClass('bounce-in');
+            });
+        }
+    });
 </script>
 </body>
 </html>
