--- a/services.html
+++ b/services.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="css/styles-services.css"/>
     <link rel="stylesheet" href="css/plugins/remodal.css">
     <link rel="stylesheet" href="css/plugins/remodal-default-theme.css">
+    <script src="js/plugins/modernizr.custom.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -172,7 +173,7 @@
         <!-- / .container -->
     </div>
     <!-- / .hero -->
-    <div id="hostFeatures">
+<!--    <div id="hostFeatures">
         <div class="section host host-one" id="host-one">
             <div class="container">
                 <div class="row">
@@ -188,7 +189,7 @@
                     </div>
                 </div>
             </div>
-        </div>    <!--host-one-->
+        </div>    &lt;!&ndash;host-one&ndash;&gt;
         <div class="section host host-two" id="host-two">
             <div class="container">
                 <div class="row">
@@ -207,7 +208,7 @@
                     </div>
                 </div>
             </div>
-        </div>    <!--host-two-->
+        </div>    &lt;!&ndash;host-two&ndash;&gt;
         <div class="section host host-one" id="host-three">
             <div class="container">
                 <div class="row">
@@ -223,7 +224,7 @@
                     </div>
                 </div>
             </div>
-        </div>    <!--host-one-->
+        </div>    &lt;!&ndash;host-one&ndash;&gt;
         <div class="section host host-two" id="host-four">
             <div class="container">
                 <div class="row">
@@ -244,8 +245,137 @@
                     </div>
                 </div>
             </div>
-        </div>    <!--host-two-->
-    </div> <!--host features-->
+        </div>    &lt;!&ndash;host-two&ndash;&gt;
+    </div> &lt;!&ndash;host features&ndash;&gt;-->
+    <div class="main">
+        <ul id="og-grid" class="og-grid">
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/1.jpg" data-title="Azuki bean" data-description="Swiss chard pumpkin bunya nuts maize plantain aubergine napa cabbage soko coriander sweet pepper water spinach winter purslane shallot tigernut lentil beetroot.">
+                    <img src="images/thumbs/1.jpg" alt="img01"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/2.jpg" data-title="Veggies sunt bona vobis" data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
+                    <img src="images/thumbs/2.jpg" alt="img02"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/3.jpg" data-title="Dandelion horseradish" data-description="Cabbage bamboo shoot broccoli rabe chickpea chard sea lettuce lettuce ricebean artichoke earthnut pea aubergine okra brussels sprout avocado tomato.">
+                    <img src="images/thumbs/3.jpg" alt="img03"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/1.jpg" data-title="Azuki bean" data-description="Swiss chard pumpkin bunya nuts maize plantain aubergine napa cabbage soko coriander sweet pepper water spinach winter purslane shallot tigernut lentil beetroot.">
+                    <img src="images/thumbs/1.jpg" alt="img01"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/2.jpg" data-title="Veggies sunt bona vobis" data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
+                    <img src="images/thumbs/2.jpg" alt="img02"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/3.jpg" data-title="Dandelion horseradish" data-description="Cabbage bamboo shoot broccoli rabe chickpea chard sea lettuce lettuce ricebean artichoke earthnut pea aubergine okra brussels sprout avocado tomato.">
+                    <img src="images/thumbs/3.jpg" alt="img03"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/1.jpg" data-title="Azuki bean" data-description="Swiss chard pumpkin bunya nuts maize plantain aubergine napa cabbage soko coriander sweet pepper water spinach winter purslane shallot tigernut lentil beetroot.">
+                    <img src="images/thumbs/1.jpg" alt="img01"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/2.jpg" data-title="Veggies sunt bona vobis" data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
+                    <img src="images/thumbs/2.jpg" alt="img02"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/3.jpg" data-title="Dandelion horseradish" data-description="Cabbage bamboo shoot broccoli rabe chickpea chard sea lettuce lettuce ricebean artichoke earthnut pea aubergine okra brussels sprout avocado tomato.">
+                    <img src="images/thumbs/3.jpg" alt="img03"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/1.jpg" data-title="Azuki bean" data-description="Swiss chard pumpkin bunya nuts maize plantain aubergine napa cabbage soko coriander sweet pepper water spinach winter purslane shallot tigernut lentil beetroot.">
+                    <img src="images/thumbs/1.jpg" alt="img01"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/2.jpg" data-title="Veggies sunt bona vobis" data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
+                    <img src="images/thumbs/2.jpg" alt="img02"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/3.jpg" data-title="Dandelion horseradish" data-description="Cabbage bamboo shoot broccoli rabe chickpea chard sea lettuce lettuce ricebean artichoke earthnut pea aubergine okra brussels sprout avocado tomato.">
+                    <img src="images/thumbs/3.jpg" alt="img03"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/1.jpg" data-title="Azuki bean" data-description="Swiss chard pumpkin bunya nuts maize plantain aubergine napa cabbage soko coriander sweet pepper water spinach winter purslane shallot tigernut lentil beetroot.">
+                    <img src="images/thumbs/1.jpg" alt="img01"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/2.jpg" data-title="Veggies sunt bona vobis" data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
+                    <img src="images/thumbs/2.jpg" alt="img02"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/3.jpg" data-title="Dandelion horseradish" data-description="Cabbage bamboo shoot broccoli rabe chickpea chard sea lettuce lettuce ricebean artichoke earthnut pea aubergine okra brussels sprout avocado tomato.">
+                    <img src="images/thumbs/3.jpg" alt="img03"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/1.jpg" data-title="Azuki bean" data-description="Swiss chard pumpkin bunya nuts maize plantain aubergine napa cabbage soko coriander sweet pepper water spinach winter purslane shallot tigernut lentil beetroot.">
+                    <img src="images/thumbs/1.jpg" alt="img01"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/2.jpg" data-title="Veggies sunt bona vobis" data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
+                    <img src="images/thumbs/2.jpg" alt="img02"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/3.jpg" data-title="Dandelion horseradish" data-description="Cabbage bamboo shoot broccoli rabe chickpea chard sea lettuce lettuce ricebean artichoke earthnut pea aubergine okra brussels sprout avocado tomato.">
+                    <img src="images/thumbs/3.jpg" alt="img03"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/1.jpg" data-title="Azuki bean" data-description="Swiss chard pumpkin bunya nuts maize plantain aubergine napa cabbage soko coriander sweet pepper water spinach winter purslane shallot tigernut lentil beetroot.">
+                    <img src="images/thumbs/1.jpg" alt="img01"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/2.jpg" data-title="Veggies sunt bona vobis" data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
+                    <img src="images/thumbs/2.jpg" alt="img02"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/3.jpg" data-title="Dandelion horseradish" data-description="Cabbage bamboo shoot broccoli rabe chickpea chard sea lettuce lettuce ricebean artichoke earthnut pea aubergine okra brussels sprout avocado tomato.">
+                    <img src="images/thumbs/3.jpg" alt="img03"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/1.jpg" data-title="Azuki bean" data-description="Swiss chard pumpkin bunya nuts maize plantain aubergine napa cabbage soko coriander sweet pepper water spinach winter purslane shallot tigernut lentil beetroot.">
+                    <img src="images/thumbs/1.jpg" alt="img01"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/2.jpg" data-title="Veggies sunt bona vobis" data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
+                    <img src="images/thumbs/2.jpg" alt="img02"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/3.jpg" data-title="Dandelion horseradish" data-description="Cabbage bamboo shoot broccoli rabe chickpea chard sea lettuce lettuce ricebean artichoke earthnut pea aubergine okra brussels sprout avocado tomato.">
+                    <img src="images/thumbs/3.jpg" alt="img03"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://cargocollective.com/jaimemartinez/" data-largesrc="images/1.jpg" data-title="Azuki bean" data-description="Swiss chard pumpkin bunya nuts maize plantain aubergine napa cabbage soko coriander sweet pepper water spinach winter purslane shallot tigernut lentil beetroot.">
+                    <img src="images/thumbs/1.jpg" alt="img01"/>
+                </a>
+            </li>
+        </ul>
+    </div>
     <div class="section actionlink" id="actionlink">
         <div class="container">
             <div class="row">
@@ -320,7 +450,13 @@
 <script src="js/plugins/contact.js"></script>
 <script src="http://malsup.github.com/jquery.cycle2.js"></script>
 <script src="js/plugins/remodal.min.js"></script>
+<script src="js/plugins/grid.js"></script>
 <!-- JS Custom -->
 <script src="js/custom.js"></script>
+<script>
+    $(function() {
+        Grid.init();
+    });
+</script>
 </body>
 </html>
