Changes to the original design. Pages updated as per discussions. More changes to be done with Backend code in place.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <ul class="nav navbar-nav navbar-right ">
                     <li class="active"><a href="#home">Home</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="demo.html">Demo</a></li>
+                    <li><a href="demo/index.html" target="_blank">Demo</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="support.html">Support</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
